name:                crypto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/crypto#readme
license:             BSD3
license-file:        LICENSE
author:              Tony Poerio
maintainer:          tony@tonypoer.io
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable crypto
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       aeson,
                       bytestring,
                       hex,
                       binary,
                       base64-bytestring,
                       base16-bytestring,
                       containers,
                       tasty,
                       tasty-hunit,
                       hspec,
                       Crypto,
                       cryptonite,
                       memory,
                       split
